--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -113,7 +113,7 @@
         <div class="container">
             <div class="row headline">
                 <div class="col-xs-12 col-lg-12">
-                    <h2>The best design<br> for your studio website</h2>
+                    <h2>NUESTROS CLIENTES<br>ESTÁN SATISFECHOS</h2>
                 </div>
             </div>
         </div>
@@ -227,7 +227,7 @@
                             <div class="card">
                                 <a href="#" target="_blank" class="main-link">
                                     <div class="image">
-                                        <img style="height: auto !important;" src="assets/img/uriel-soberanes.png" alt="escribe el nombre">
+                                        <img style="height: auto !important;" src="assets/img/faces/uriel-soberanes.png" alt="escribe el nombre">
                                     </div>
                                 </a>
                             </div>
@@ -256,18 +256,104 @@
                                     </div>
                                 </a>
                             </div>
-
                             <div class="card">
                                 <a href="#" target="_blank" class="main-link">
                                     <div class="image">
-                                        <img style="height: auto !important;" src="assets/img/uriel-soberanes.png" alt="escribe el nombre">
+                                        <img style="height: auto !important;" src="assets/img/faces/AVATAR SAC.PNG" alt="AVATAR SAC">
                                     </div>
                                 </a>
                             </div>
-                        </div>
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/BIABO.PNG" alt="BIABO">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/CEINSA.PNG" alt="CEINSA">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/CONCRETA.PNG" alt="CONCRETA">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/CONSTRUYE PERÚ.PNG" alt="CONSTRUYE PERÚ">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/NUEVA AURORA.PNG" alt="NUEVA AURORA">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/OIG BIENES.PNG" alt="OIG BIENES">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/ERALMA.PNG" alt="ERALMA">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/PAREDES.PNG" alt="PAREDES">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/RUESMA.PNG" alt="RUESMA">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/TORRESCAMA.PNG" alt="TORRESCAMA">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/WESCOM.PNG" alt="WESCOM">
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="card">
+                                <a href="#" target="_blank" class="main-link">
+                                    <div class="image">
+                                        <img style="height: auto !important;" src="assets/img/faces/YACU.PNG" alt="YACU">
+                                    </div>
+                                </a>
+                            </div>
+
+
 
                     </div>
+
                 </div>
+                
             </div>
         </div>
     </div>
