--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -36,7 +36,7 @@
                         <p class="d-lg-none">GitHub</p>
                     </a>
                 </li>
-               --> 
+               -->
                 <li class="nav-item" *ngIf="!isDocumentation()">
                     <a [routerLink]="['/nosotros']" class="nav-link"> NOSOTROS</a>
                 </li>
@@ -53,7 +53,8 @@
                 </li>
                 -->
                 <li class="nav-item">
-                    <a href="#" class="btn btn-danger btn-round">Cóntactanos</a>
+                    <a target="_blank" href="https://web.whatsapp.com/send?phone=51986669667&text=" class="btn btn-danger btn-round">Cóntactanos</a>
+
                 </li>
 
                 <!-- 
