--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -63,6 +63,15 @@
         </ng-template>
     </ngb-carousel>
 
+
+
+
+
+
+
+
+
+    <!--
     <div class="section">
         <div class="container">
             <div class="row" id="modals">
@@ -91,8 +100,17 @@
                 </div>
             </div>
         </div>
-
     </div>
+-->
+
+
+
+
+
+
+
+
+
 
     <div class="main">
         <app-basicelements></app-basicelements>
@@ -125,7 +143,7 @@
                                 <div class="contenedorespecial">
                                     <h2>REMODELACIÓN Y AMPLIACIÓN DEL HOTEL ESTELAR</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: Remodelación y Ampliación del Hotel Estelar
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -151,7 +169,7 @@
                                 <div class="contenedorespecial">
                                     <h2>EDIFICIO MULTIFAMILIAR "RESIDENCIAL ARTIGAS"</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: Edificio Multifamiliar "Residencial Artigas"
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -177,7 +195,7 @@
                                 <div class="contenedorespecial">
                                     <h2>CONDOMINIO PASEO SAN MARTIN TORRES</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: Condominio Paseo San Martin Torres
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -203,7 +221,7 @@
                                 <div class="contenedorespecial">
                                     <h2>E28 ESPACIOS</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: E28 Epacios
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -229,7 +247,7 @@
                                 <div class="contenedorespecial">
                                     <h2>EDIFICIO MULTIFAMILIAR KASURI</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: Edificio Multifamiliar Kasuri
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -255,7 +273,7 @@
                                 <div class="contenedorespecial">
                                     <h2>EL ENCANTO DE SAN DIEGO</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: El Encanto de San Diego
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -281,7 +299,7 @@
                                 <div class="contenedorespecial">
                                     <h2>GALERIA FERIAL EL RELOJ MALVINAS PLAZA</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: Galeria Ferial el Reloj Malvinas Plaza
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -307,7 +325,7 @@
                                 <div class="contenedorespecial">
                                     <h2>LOS PARQUES DE VILLASOL</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: Los Parques de Villasol
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -334,7 +352,7 @@
                                 <div class="contenedorespecial">
                                     <h2>HOSPITAL COTAHUASI</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: Hospital Cotahuasi
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -360,7 +378,7 @@
                                 <div class="contenedorespecial">
                                     <h2>IPAE REAL PLAZA CHICLAYO</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: Ipae Real Plaza Chiclayo
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -386,7 +404,7 @@
                                 <div class="contenedorespecial">
                                     <h2>COLEGIO INNVOVA SCHOOL SEDE ATE</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: Colegio Innova School Sede Ate
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -412,7 +430,7 @@
                                 <div class="contenedorespecial">
                                     <h2>MALL PLAZA DE COMAS</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: Mall Plaza de Comas
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -438,7 +456,7 @@
                                 <div class="contenedorespecial">
                                     <h2>EDIFICIO RESIDENCIAL MARANGA N°175</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: Edificio Residencial Maranga N° 175
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -464,7 +482,7 @@
                                 <div class="contenedorespecial">
                                     <h2>MEJORAMIENTO DE LA I.E.P.N°86559 LIBERTADOR SAN MARTIN</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: Mejoramiento de la I.E.P.N°86559 Libertador San Martin
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -490,7 +508,7 @@
                                 <div class="contenedorespecial">
                                     <h2>PROYECTO POISE</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: Proyecto Poise
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -516,7 +534,7 @@
                                 <div class="contenedorespecial">
                                     <h2>REFACCION DE LAS INSTALACIONES SUNAT</h2>
                                     <p class="top8">
-                                        sadasdasdasfasfasf
+                                        SOBRE EL PROYECTO Proyecto: Refacción de las Instalaciones SUNAT
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -542,7 +560,7 @@
                                 <div class="contenedorespecial">
                                     <h2>EDIFICIO MULTIFAMILIAR TEJADA</h2>
                                     <p class="top8">
-                                        asdasdasdasdasdasdsdfsdf
+                                        SOBRE EL PROYECTO Proyecto: Edificio Multifamiliar Tejada
                                     </p>
                                     <br>
                                     <a href="#" class="btn" tabindex="0">Ver proyecto</a>
@@ -596,7 +614,8 @@
                     <label>EXPERIENCIAS UNICAS</label>
                 </h2>
                 <p class="top8">
-                    asdasdasdasdasdasdsdfsdf
+                    Somos una empresa constructora, capaces
+                    de enfrentar nuevos retos de nuestros clientes.
                 </p>
                 <br>
                 <a href="#" class="btn" tabindex="0">Conócenos</a>
