--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -715,7 +715,7 @@ body {
 .amoi h2 label {
     font-size: 2.005em !important;
     line-height: 35pt;
-    color: blue;
+    color: #1e2353;
 }
 
 .amoi:visited {
@@ -769,7 +769,7 @@ body {
 .contenedorespecial2 h2 label {
     font-size: 2.005em !important;
     line-height: 35pt;
-    color: blue;
+    color: #1e2353;
 }
 
 
