--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand-lg fixed-top navbar-transparent" color-on-scroll="500">
     <div class="container">
         <div class="navbar-translate">
-            <a class="navbar-brand" [routerLink]="['/home']">       
+            <a class="navbar-brand" [routerLink]="['/home']">
                 <img style="height: auto !important;" src="assets/img/logo.png" width="200" alt="RTZ Contratistas Generales">
-            
+
             </a>
             <button class="navbar-toggler navbar-burger" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation" (click)="sidebarToggle()">
                 <span class="navbar-toggler-bar"></span>
@@ -56,7 +56,7 @@
                 </li>
                 -->
                 <li class="nav-item">
-                    <a target="_blank" href="https://web.whatsapp.com/send?phone=51986669667&text=" class="btn btn-danger btn-round">Cóntactanos</a>
+                    <a target="_blank" href="https://web.whatsapp.com/send?phone=51986669667&text=" class="btn btn-success btn-round">Cóntactanos</a>
 
                 </li>
 
