--- a/src/assets/sass/paper-kit/_navbars.scss
+++ b/src/assets/sass/paper-kit/_navbars.scss
@@ -399,7 +399,7 @@
 
     .navbar[class*="bg-"] & .navbar-toggler-bar,
     .navbar.navbar-transparent & .navbar-toggler-bar{
-        background: #fff;
+        background: #66615b;
     }
 
     .navbar-toggler-bar{
