--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -614,8 +614,7 @@
                     <label>EXPERIENCIAS UNICAS</label>
                 </h2>
                 <p class="top8">
-                    Somos una empresa constructora, capaces
-                    de enfrentar nuevos retos de nuestros clientes.
+                    Somos una empresa constructora, capaces de enfrentar nuevos retos de nuestros clientes.
                 </p>
                 <br>
                 <a href="#" class="btn" tabindex="0">Conócenos</a>
@@ -629,7 +628,7 @@
 
 
 
-<div class="container tim-container">
+<div class="container tim-container" style="width: 90%;">
     <div id="images">
         <div class="container">
             <div class="tim-title" style="text-align: center;">
