--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -1,5 +1,11 @@
-<p>proyectos works!</p>
 <div class="section section-dark">
+    <div class="container">
+        <div class="row">
+
+        </div>
+    </div>
+</div>
+<div class="section section-white">
     <div class="container">
         <div class="row">
             <div class="col-md-8 ml-auto mr-auto text-center">
