--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -129,7 +129,7 @@
     </div>
 </div>
 <div class="slider_report">
-    <section class="variable slider" style="background-color: transparent;">
+    <section class="variable slider claudia" style="background-color: transparent;">
         <div>
             <div class="item1 slider_card">
 
