--- a/src/app/components/nosotros/nosotros.component.html
+++ b/src/app/components/nosotros/nosotros.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper gato">
     <div class="page-header section-dark" style="background-image: url('assets/img/nosotros/nosotrosbanner.png')">
         <div class="filter"></div>
         <div class="content-center">
@@ -32,11 +32,15 @@
         <div class="section section-light section-nucleo-icons">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 col-md-12">
+                    <div class="col-lg-6 col-md-12 clau">
                         <h2 class="title">MISIÓN</h2><br/>
                         <p class="description" style="text-align: justify !important;">
                             Somos una empresa dedicada a direccionar, ejecutar y gestionar de manera eficaz y transparente proyectos y prestación de servicios directos en el ámbito de la construcción, con la participación del personal capacitado y estimulado en una cultura orientada a la satisfacción de nuestros clientes, a la práctica del trabajo con responsabilidad, seguridad y al respeto de nuestro entorno natural en busca de lograr mantener un nivel competitivo.
-                        </p>    
+                        </p>
+                        <h2 class="title">VISIÓN</h2><br/>
+                        <p class="description" style="text-align: justify !important;">
+                            Ser reconocida como la empresa del rubro de construcción más eficiente y  confiable a nivel nacional.  Tener  claramente  que  nosotros  a  diferencia  de  otras  empresas  somos  puntual  y brindamos garantía de por medio.
+                        </p>
                     </div>
                     
                     <div class="col-lg-6 col-md-12">
@@ -49,13 +53,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-12">
-                        <img src="./assets/img/nosotros/vision.png" style="width: 100%;" alt="">
-                    </div>
-                    <div class="col-lg-6 col-md-12">
-                        <h2 class="title">VISIÓN</h2><br/>
-                        <p class="description" style="text-align: justify !important;">
-                            Ser reconocida como la empresa del rubro de construcción más eficiente y  confiable a nivel nacional.  Tener  claramente  que  nosotros  a  diferencia  de  otras  empresas  somos  puntual  y brindamos garantía de por medio.
-                        </p>
+                        
                     </div>          
                 </div>
             </div>
