--- a/src/assets/sass/paper-kit/_navbars.scss
+++ b/src/assets/sass/paper-kit/_navbars.scss
@@ -19,7 +19,7 @@
     .navbar-brand{
         font-weight: $font-weight-bold;
         margin: $navbar-margin-brand;
-        padding: $navbar-padding-brand;
+        padding: 0px 15px;
         font-size: $font-size-base;
         color: $default-color;
         text-transform: uppercase;
@@ -117,7 +117,7 @@
        @include center-item();
     }
     &.navbar-transparent{
-        padding-top: 25px;
+        /*padding-top: 25px;*/
     }
     .logo-container{
         margin-top: 5px;
